--- a/public/index.html
+++ b/public/index.html
@@ -197,8 +197,8 @@
                       <br> 78345
                     </p>
                     <h1 class="intro-title mb-4 ">
-                      <span class="color-b">204 </span> Mount
-                      <br> Olive Road Two
+                      <span class="color-b">High Performance </span> Lending
+                      <br> App
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
@@ -222,8 +222,8 @@
                       <br> 78345
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Rino
-                      <br> Venda Road Five
+                      <span class="color-b">High Performance </span> Curated
+                      <br> App
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
@@ -247,8 +247,8 @@
                       <br> 78345
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Alira
-                      <br> Roan Road One
+                      <span class="color-b">High Performance </span> Aesthetic
+                      <br> App
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
