--- a/public/index.html
+++ b/public/index.html
@@ -197,8 +197,8 @@
                       <br> 78345
                     </p>
                     <h1 class="intro-title mb-4 ">
-                      <span class="color-b">High Performance </span> Lending
-                      <br> App
+                      <span class="color-b">Make lending effortless</span> with our cutting-edge
+                      <br> mobile app technology
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
