--- a/public/index.html
+++ b/public/index.html
@@ -193,12 +193,12 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Doral, Florida
-                      <br> 78345
+                    <p class="intro-title-top">Best Android Design
+                      <br> 2021
                     </p>
                     <h1 class="intro-title mb-4 ">
-                      <span class="color-b">Be effortless</span> with our cutting-edge
-                      <br> technology
+                      <span class="color-b">Effortless</span> 
+                      <br> cutting-edge technology
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
@@ -218,12 +218,12 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Doral, Florida
-                      <br> 78345
+                    <p class="intro-title-top">Well Architected Award
+                      <br> 2021
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">High Performance </span> Curated
-                      <br> App
+                      <span class="color-b">High Performance </span> Curated App
+                      <br>
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
@@ -243,12 +243,12 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Doral, Florida
-                      <br> 78345
+                    <p class="intro-title-top">DL Award
+                      <br> 2023
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">High Performance </span> Aesthetic
-                      <br> App
+                      <span class="color-b">Great </span> Aesthetics
+                      <br> 
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
