--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Morgez<span class="color-b">Solutions</span></a>
+      <a class="navbar-brand text-brand" href="index.html">Morgez<span class="color-b"> Solutions</span></a> 
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -201,7 +201,7 @@
                       <br> cutting-edge technology
                     </h1>
                     <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | $ 12.000</span></a>
+                      <a href="#"><span class="price-a">Learn More</span></a>
                     </p>
                   </div>
                 </div>
@@ -226,7 +226,7 @@
                       <br>
                     </h1>
                     <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | $ 12.000</span></a>
+                      <a href="#"><span class="price-a">Learn More</span></a>
                     </p>
                   </div>
                 </div>
@@ -243,7 +243,7 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">DL Award
+                    <p class="intro-title-top"> Sir David Landeu Award
                       <br> 2023
                     </p>
                     <h1 class="intro-title mb-4">
@@ -251,7 +251,7 @@
                       <br> 
                     </h1>
                     <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | $ 12.000</span></a>
+                      <a href="#"><span class="price-a">Learn More</span></a>
                     </p>
                   </div>
                 </div>
@@ -362,10 +362,10 @@
           <div class="col-md-12">
             <div class="title-wrap d-flex justify-content-between">
               <div class="title-box">
-                <h2 class="title-a">Latest Properties</h2>
+                <h2 class="title-a">Curated Modules</h2>
               </div>
               <div class="title-link">
-                <a href="property-grid.html">All Property
+                <a href="property-grid.html">All Modules
                   <span class="bi bi-chevron-right"></span>
                 </a>
               </div>
